--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
