--- a/.github/workflows/npm-publish-main.yml
+++ b/.github/workflows/npm-publish-main.yml
@@ -28,7 +28,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: username/my-react-app:latest
+          tags: dentocure/dentocure-frontend:latest
 
       # - name: 🚀 Trigger Deploy on Render
       #   run: |
