--- a/.github/workflows/npm-publish-main.yml
+++ b/.github/workflows/npm-publish-main.yml
@@ -1,28 +1,28 @@
-name: Build and Push Docker Image
+name: 🚀 Build & Push Docker Image, Deploy to Render
 
 on:
   push:
     branches:
-      - main  # or your deploy branch
+      - main  # Trigger on push to main branch
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📦 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: 🛠 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: 🔑 Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: 🐳 Build & push Docker image to Docker Hub
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -30,6 +30,5 @@ jobs:
           push: true
           tags: dentocure/dentocure-frontend:latest
 
-      # - name: 🚀 Trigger Deploy on Render
-      #   run: |
-      #     curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+      - name: 🚀 Trigger deploy on Render
+        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
